add database readiness check
